# cookiecutter-pyproject

./: .cz.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  ruff.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: docs.yml  pre-commit.yml
docs/: index.md
hooks/: post_gen_project.py  pre_gen_project.py
search/: search_index.json
tests/: bake_test.py  conftest.py  test_bake.py  test_command_line_interface.py  test_defaults.py  test_documentation_framework.py  test_is_package.py  test_open_source_license.py  test_python_version.py
{{cookiecutter.project_folder}}/: .cz.toml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  mkdocs.yml  pyproject.toml
{{cookiecutter.project_folder}}/.github/: dependabot.yml
{{cookiecutter.project_folder}}/.github/workflows/: pre-commit.yml
{{cookiecutter.project_folder}}/src/: {{cookiecutter.project_slug}}.py
{{cookiecutter.project_folder}}/tests/: conftest.py  {{cookiecutter.project_slug}}_test.py
{{cookiecutter.project_name}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: pre-commit.yml
