[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
authors = [
    {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"},
]
requires-python = ">={{ cookiecutter.python_version }}"

[project.urls]
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_folder}}"
{%- if cookiecutter.documentation_framework == "MKDocs" %}
documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.project_folder}}"
{%- endif %}

[project.optional-dependencies]
dev = [
    "pip-tools",
    "cleanpy",
    "pre-commit",
{%- if cookiecutter.documentation_framework == "MKDocs" %}
    "mkdocs-material",
{%- endif %}
]

[project.scripts]
{{cookiecutter.project_folder}} = "{{cookiecutter.project_slug}}:cli"

[tool.ruff]
include = ["src/**/*.py"]
fix = true
line-length = 100
select = [
    "A",    # flake8-builtins: check builtins used as variables or parameters
    "B",    # flake8-bugbear: security warnings
    "E",    # pycodestyle-errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade: better syntax for python version
    "RUF",  # ruff
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
files = "src/**/*.py"
check_untyped_defs = true
