[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
authors = [
    {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"},
]
requires-python = ">={{ cookiecutter.python_version }}"
{%- if cookiecutter.command_line_interface == 'Typer' and cookiecutter.is_package %}
dependencies = [
    "typer[all]",
]
{%- endif %}

[project.urls]
{%- if cookiecutter.documentation_framework == "MKDocs" %}
homepage = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.project_folder}}"
documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.project_folder}}"
{%- endif %}
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_folder}}"

[project.optional-dependencies]
dev = [
    "pip-tools",
    "cleanpy",
    "pre-commit",
{%- if cookiecutter.is_package %}
    "pytest",
{%- endif %}
{%- if cookiecutter.documentation_framework == "MKDocs" %}
    "mkdocs-material",
{%- endif %}
    "commitizen",
]

{%- if cookiecutter.is_package and cookiecutter.command_line_interface != 'No cli' %}

[project.scripts]
{%- if cookiecutter.command_line_interface == 'Typer' %}
{{cookiecutter.project_folder}} = "{{cookiecutter.project_slug}}:main"
{%- elif cookiecutter.command_line_interface == 'Argparse' %}
{{cookiecutter.project_folder}} = "{{cookiecutter.project_slug}}:cli"
{%- endif %}
{%- endif %}

{%- if cookiecutter.is_package %}

[tool.pytest.ini_options]
pythonpath = "src"
{%- endif %}

[tool.ruff]
{%- if cookiecutter.is_package %}
include = ["src/**/*.py"]
{%- endif %}
fix = true
line-length = 100
select = [
    "A",    # flake8-builtins: check builtins used as variables or parameters
    "B",    # flake8-bugbear: security warnings
    "E",    # pycodestyle-errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade: better syntax for python version
    "RUF",  # ruff
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
{%- if cookiecutter.is_package %}
files = "src/**/*.py"
{%- endif %}
check_untyped_defs = true
